<?xml version="1.0" encoding="utf-8"?>
<!--
    This file is part of ToneDialer from nullpathos.eu.

    ToneDialer is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    ToneDialer is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with ToneDialer.  If not, see <http://www.gnu.org/licenses/>.
 -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <eu.nullpathos.tonedialer.NumberPreference
        android:id="@+id/mintime_preference"
        android:defaultValue="250"
        android:key="mintime"
        android:summary="@string/mintime_summary_text"
        android:title="@string/mintime_pref_text" />
    
    <eu.nullpathos.tonedialer.NumberPreference
        android:id="@+id/gap_preference"
        android:defaultValue="70"
        android:key="gap"
        android:summary="@string/gap_summary_text"
        android:title="@string/gap_pref_text" />

    <eu.nullpathos.tonedialer.VolumePreference
        android:id="@+id/vol_preference"
        android:defaultValue="50"
        android:key="volume"
        android:summary="@string/vol_summary_text"
        android:title="@string/vol_pref_text" />

</PreferenceScreen>